fix window bar position on mobile layout

--- a/src/renderer/layouts/mobile-layout/mobile-layout.module.css
+++ b/src/renderer/layouts/mobile-layout/mobile-layout.module.css
@@ -14,6 +14,11 @@
     background: var(--theme-colors-background);
 }
 
+.windows,
+.macos {
+    grid-template-rows: 30px calc(100vh - 120px) 90px;
+}
+
 .drawer-button {
     position: absolute;
     bottom: calc(90px + 0.75rem);
