--- a/src/renderer/layouts/window-bar.module.css
+++ b/src/renderer/layouts/window-bar.module.css
@@ -1,8 +1,14 @@
+.window-bar {
+    grid-area: window-bar;
+    height: 30px;
+}
+
 .windows-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     background: var(--theme-colors-background);
     border-bottom: 1px solid alpha(var(--theme-colors-border), 0.5);
     -webkit-app-region: drag;
@@ -50,11 +56,23 @@
     white-space: nowrap;
 }
 
+@media only screen and (width < 768px) {
+    .player-status-container {
+        max-width: calc(100vw - 150px);
+        padding-left: 0.5rem;
+    }
+
+    .windows-button-group {
+        width: 120px;
+    }
+}
+
 .macos-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     background: var(--theme-colors-background);
     border-bottom: 1px solid alpha(var(--theme-colors-border), 0.5);
     -webkit-app-region: drag;
